# ai-qa-automation-architect

./: .env  README.md  pyproject.toml
.commandcode/taste/: taste.md
ai_qa_automation_architect.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/: main.py
backend/app/schemas/: TestCase_Contract.json  Test_Plan_Contract.json  jira_ticket.json  requirement_analysis.json
deployment/: .gitkeep
prompts/: coverage.md  email.md  requirement.md  testcase.md  testplan.md
rag/chromadb/: .gitkeep
templates/: email-template.md  email.md  report-template.md  report.md  testplan-template.md  testplan.md
